--- a/Visual Studio/2D RPG Negiramen/Views/MainPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/MainPage.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:app="clr-namespace:_2D_RPG_Negiramen"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:viewModels="clr-namespace:_2D_RPG_Negiramen.ViewModels"
              x:Class="_2D_RPG_Negiramen.Views.MainPage">
 
@@ -180,7 +181,18 @@
                 <Button Grid.Row="2" Grid.Column="1"
                         Text="{app:Translate TilePaletteEditing}"
                         SemanticProperties.Hint="Tile palette editor page"
-                        Clicked="TilePaletteEditButton_Clicked"/>
+                        Opacity="1"
+                        Clicked="TilePaletteEditButton_Clicked">
+                    
+                    <Button.Behaviors>
+                        <toolkit:AnimationBehavior EventName="Clicked">
+                            <toolkit:AnimationBehavior.AnimationType>
+                                <toolkit:FadeAnimation Opacity="0.5" />
+                            </toolkit:AnimationBehavior.AnimationType>
+                        </toolkit:AnimationBehavior>
+                    </Button.Behaviors>
+                    
+                </Button>
             </Grid>
 
             <Label HorizontalOptions="Center"
