--- a/Visual Studio/2D RPG Negiramen/Views/MainPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/MainPage.xaml
@@ -181,17 +181,23 @@
                 <Button Grid.Row="2" Grid.Column="1"
                         Text="{app:Translate TilePaletteEditing}"
                         SemanticProperties.Hint="Tile palette editor page"
-                        Opacity="1"
                         Clicked="TilePaletteEditButton_Clicked">
                     
+                    <!--
+                        動かない
+                        Opacity="1"
                     <Button.Behaviors>
                         <toolkit:AnimationBehavior EventName="Clicked">
                             <toolkit:AnimationBehavior.AnimationType>
-                                <toolkit:FadeAnimation Opacity="0.5" />
+
+                                <toolkit:FadeAnimation Opacity="0"
+                                                       Length="30000"/>
+                                
                             </toolkit:AnimationBehavior.AnimationType>
                         </toolkit:AnimationBehavior>
                     </Button.Behaviors>
-                    
+                    -->
+
                 </Button>
             </Grid>
 
