--- a/Visual Studio/2D RPG Negiramen/Views/MainPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/MainPage.xaml
@@ -40,162 +40,166 @@
     <ScrollView>
         <!-- BackgroundColor="Gainsboro"
         -->
-        <VerticalStackLayout Spacing="25"
-                             Padding="30,0">
+        <Grid RowDefinitions="200,*">
 
-            <Image
-                Source="title_header.png"
-                SemanticProperties.Description="title header"
-                HeightRequest="200"
-                HorizontalOptions="Center" />
+            <Image Grid.Row="0"
+                   Source="title_header.png"
+                   SemanticProperties.Description="title header"
+                   HeightRequest="200"
+                   HorizontalOptions="Center" />
 
-            <!-- 「言語を選ぶ」 -->
-            <Picker x:Name="picker"
+            <VerticalStackLayout Grid.Row="1"
+                                 Spacing="25"
+                                 Padding="30,0"
+                                 BackgroundColor="SkyBlue">
+
+                <!-- 「言語を選ぶ」 -->
+                <Picker x:Name="picker"
                     HorizontalOptions="Center"
                     ItemsSource="{Binding LocaleIdCollection}"
                     SelectedItem="{Binding CultureInfoAsStr}"
                     Title="{app:Translate SelectLanguage}"/>
 
-            <!-- 「画面をレイアウトする」 -->
-            <Label HorizontalOptions="Center"
+                <!-- 「画面をレイアウトする」 -->
+                <Label HorizontalOptions="Center"
                    Text="{app:Translate LayoutTheScreen}"
                    SemanticProperties.HeadingLevel="Level1"
                    FontSize="32"/>
 
-            <Grid ColumnDefinitions="*,*" RowDefinitions="*,*">
+                <Grid ColumnDefinitions="*,*" RowDefinitions="*,*">
 
-                <!-- 「マップ画面を作る」 -->
-                <Button Grid.Row="0" Grid.Column="0"
+                    <!-- 「マップ画面を作る」 -->
+                    <Button Grid.Row="0" Grid.Column="0"
                         x:Name="CreateMapViewBtn"
                         Text="{app:Translate CreateAMapScreen}"
                         SemanticProperties.Hint="Create the map view"
                         Clicked="CreateMapViewBtn_Clicked"/>
 
-                <!-- 「戦闘画面を作る」 -->
-                <Button Grid.Row="0" Grid.Column="1"
+                    <!-- 「戦闘画面を作る」 -->
+                    <Button Grid.Row="0" Grid.Column="1"
                         x:Name="CreateBattleViewBtn"
                         Text="{app:Translate CreateABattleScreen}"
                         SemanticProperties.Hint="Create the battle view"
                         Clicked="CreateBattleBtn_Clicked"/>
 
-                <!-- 「メニュー画面を作る」 -->
-                <Button Grid.Row="1" Grid.Column="0"
+                    <!-- 「メニュー画面を作る」 -->
+                    <Button Grid.Row="1" Grid.Column="0"
                         x:Name="CreateMenuViewBtn"
                         Text="{app:Translate CreateAMenuScreen}"
                         SemanticProperties.Hint="Create the menu view"
                         Clicked="CreateMenuViewBtn_Clicked"/>
 
-                <!-- 「会話画面を作る」 -->
-                <Button Grid.Row="1" Grid.Column="1"
+                    <!-- 「会話画面を作る」 -->
+                    <Button Grid.Row="1" Grid.Column="1"
                         x:Name="CreateTalkingBtn"
                         Text="{app:Translate CreateAConversationScreen}"
                         SemanticProperties.Hint="Create the talking view"
                         Clicked="CreateTalkingBtn_Clicked"/>
 
-            </Grid>
+                </Grid>
 
-            <!-- 「データを編集する」 -->
-            <Label HorizontalOptions="Center"
+                <!-- 「データを編集する」 -->
+                <Label HorizontalOptions="Center"
                    Text="{app:Translate EditYourData}"
                    SemanticProperties.HeadingLevel="Level1"
                    FontSize="32"/>
 
-            <Grid ColumnDefinitions="*,*" RowDefinitions="*,*,*">
+                <Grid ColumnDefinitions="*,*" RowDefinitions="*,*,*">
 
-                <!-- 「プレイヤー・キャラクターを編集」 -->
-                <Button Grid.Row="0" Grid.Column="0"
+                    <!-- 「プレイヤー・キャラクターを編集」 -->
+                    <Button Grid.Row="0" Grid.Column="0"
                         x:Name="EditPlayerCharacterBtn"
                         Text="{app:Translate EditPlayerCharacter}"
                         SemanticProperties.Hint="Edit the player character"
                         Clicked="EditPlayerCharacterBtn_Clicked"/>
 
-                <!-- 「モンスターを編集」 -->
-                <Button Grid.Row="1" Grid.Column="0"
+                    <!-- 「モンスターを編集」 -->
+                    <Button Grid.Row="1" Grid.Column="0"
                         x:Name="CreateMonsterBtn"
                         Text="{app:Translate EditTheMonster}"
                         SemanticProperties.Hint="Edit the monster"
                         Clicked="CreateMonsterBtn_Clicked"/>
 
-                <!-- 「モンスター・グループを編集」 -->
-                <Button Grid.Row="1" Grid.Column="1"
+                    <!-- 「モンスター・グループを編集」 -->
+                    <Button Grid.Row="1" Grid.Column="1"
                         x:Name="EditMonsterGroupBtn"
                         Text="{app:Translate EditAMonsterGroup}"
                         SemanticProperties.Hint="Edit the monster group"
                         Clicked="EditMonsterGroupBtn_Clicked"/>
 
-                <!-- 「アイテムを編集」 -->
-                <Button Grid.Row="2" Grid.Column="0"
+                    <!-- 「アイテムを編集」 -->
+                    <Button Grid.Row="2" Grid.Column="0"
                         x:Name="CreateItemBtn"
                         Text="{app:Translate EditItem}"
                         SemanticProperties.Hint="Edit the item"
                         Clicked="EditItemBtn_Clicked"/>
 
-                <!-- 「話しを編集」 -->
-                <Button Grid.Row="2" Grid.Column="1"
+                    <!-- 「話しを編集」 -->
+                    <Button Grid.Row="2" Grid.Column="1"
                         x:Name="EditorStoryBtn"
                         Text="{app:Translate EditTheTalk}"
                         SemanticProperties.Hint="Edit the story"
                         Clicked="EditorStoryBtn_Clicked"/>
 
-            </Grid>
+                </Grid>
 
-            <!-- 「システム」 -->
-            <Label HorizontalOptions="Center"
+                <!-- 「システム」 -->
+                <Label HorizontalOptions="Center"
                    Text="{app:Translate System}"
                    SemanticProperties.Hint="System"
                    FontSize="32"/>
 
-            <Grid RowDefinitions="*,*,*" ColumnDefinitions="*,*">
+                <Grid RowDefinitions="*,*,*" ColumnDefinitions="*,*">
 
-                <!-- 「構成」 -->
-                <Button Grid.Row="0" Grid.Column="0"
+                    <!-- 「構成」 -->
+                    <Button Grid.Row="0" Grid.Column="0"
                         Text="{app:Translate Configure}"
                         SemanticProperties.Hint="Startup configuration"
                         Clicked="StartupConfigurationBtn_Clicked"/>
 
-                <!-- 「ウィンドウ表示テスト」 -->
-                <Button Grid.Row="0" Grid.Column="1"
+                    <!-- 「ウィンドウ表示テスト」 -->
+                    <Button Grid.Row="0" Grid.Column="1"
                         Text="{app:Translate WindowDisplayTest}"
                         SemanticProperties.Hint="Test show window"
                         Clicked="TestShowWindowButton_Clicked"/>
 
-                <!-- 「ポップアップ練習」 -->
-                <Button Grid.Row="1" Grid.Column="0"
+                    <!-- 「ポップアップ練習」 -->
+                    <Button Grid.Row="1" Grid.Column="0"
                         Text="{app:Translate PopupExercises}"
                         SemanticProperties.Hint="Popup tile pallette"
                         Clicked="PopupPracticeButton_Clicked"/>
 
-                <!-- 「タイル・パレット表示」 -->
-                <Button Grid.Row="1" Grid.Column="1"
+                    <!-- 「タイル・パレット表示」 -->
+                    <Button Grid.Row="1" Grid.Column="1"
                         Text="{app:Translate TilePaletteDisplay}"
                         SemanticProperties.Hint="Show tile pallette"
                         Clicked="ShowTilePalette_Clicked"/>
 
-                <!-- 「マップ描画ページ」 -->
-                <Button Grid.Row="2" Grid.Column="0"
+                    <!-- 「マップ描画ページ」 -->
+                    <Button Grid.Row="2" Grid.Column="0"
                         Text="{app:Translate MapDrawingPage}"
                         SemanticProperties.Hint="Map drawing page"
                         Clicked="MapDrawingButton_Clicked"/>
 
-                <!-- 「タイル・パレット編集」 -->
-                <Button Grid.Row="2" Grid.Column="1"
+                    <!-- 「タイル・パレット編集」 -->
+                    <Button Grid.Row="2" Grid.Column="1"
                         Text="{app:Translate TilePaletteEditing}"
                         SemanticProperties.Hint="Tile palette editor page"
                         Clicked="TilePaletteEditButton_Clicked">
 
-                    <Button.GestureRecognizers>
-                        <PointerGestureRecognizer PointerEntered="Button_PointerGestureRecognizer_PointerEntered"
+                        <Button.GestureRecognizers>
+                            <PointerGestureRecognizer PointerEntered="Button_PointerGestureRecognizer_PointerEntered"
                                                   PointerExited="Button_PointerGestureRecognizer_PointerExited"/>
-                    </Button.GestureRecognizers>
-                    
-                </Button>
-            </Grid>
+                        </Button.GestureRecognizers>
 
-            <Label HorizontalOptions="Center"
+                    </Button>
+                </Grid>
+
+                <Label HorizontalOptions="Center"
                    VerticalOptions="Center"                    
                    Text="Welcome to .NET MAUI!"/>
-
-        </VerticalStackLayout>
+            </VerticalStackLayout>
+        </Grid>
     </ScrollView>
 
 </ContentPage>
