--- a/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
@@ -327,13 +327,23 @@
                     <Button IsEnabled="{Binding AddsButtonIsEnabled}"
                             Text="{Binding AddsButtonText}"
                             ToolTipProperties.Text="{Binding AddsButtonHint}"
-                            Clicked="AddsButton_Clicked"/>
+                            Clicked="AddsButton_Clicked">
+                        <Button.GestureRecognizers>
+                            <PointerGestureRecognizer PointerEntered="Button_PointerGestureRecognizer_PointerEntered"
+                                                  PointerExited="Button_PointerGestureRecognizer_PointerExited"/>
+                        </Button.GestureRecognizers>
+                    </Button>
 
                     <!-- 削除ボタン -->
                     <Button Margin="0,40,0,0"
                             IsEnabled="{Binding DeletesButtonIsEnabled}"
                             Text="削除"
-                            Clicked="DeletesButton_Clicked"/>
+                            Clicked="DeletesButton_Clicked">
+                        <Button.GestureRecognizers>
+                            <PointerGestureRecognizer PointerEntered="Button_PointerGestureRecognizer_PointerEntered"
+                                                  PointerExited="Button_PointerGestureRecognizer_PointerExited"/>
+                        </Button.GestureRecognizers>
+                    </Button>
 
                 </VerticalStackLayout>
             </Grid>
