--- a/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
@@ -191,33 +191,33 @@
         <ScrollView Grid.Row="1">
             <Grid RowDefinitions="*" ColumnDefinitions="*">
 
-                <!--    作業中のタイル・セット・キャンバス画像
-                        ======================================
+                <!--    作業中のタイルセット・キャンバス画像
+                        ====================================
             
                 <Image x:Name="tileImage"
                        Grid.Row="0" Grid.Column="0"
                        Margin="4,4,0,0"
                        WidthRequest="64" HeightRequest="64"
                        HorizontalOptions="Start" VerticalOptions="Start"
-                       Source="C:/Users/むずでょ/Documents/Unity Projects/Negiramen Practice/Assets/Doujin Circle Negiramen/Negiramen Quest/Auto Generated/Images/Tile Set/adventure_field.png">
+                       Source="C:/Users/むずでょ/Documents/Unity Projects/Negiramen Practice/Assets/Doujin Circle Negiramen/Negiramen Quest/Auto Generated/Images/Tileset/adventure_field.png">
                 <Image x:Name="tileImage"
                        Grid.Row="0" Grid.Column="0"
                        Margin="4,4,0,0"
                        WidthRequest="256" HeightRequest="608"
                        HorizontalOptions="Start" VerticalOptions="Start"
-                       Source="C:/Users/むずでょ/Documents/Unity Projects/Negiramen Practice/Assets/Doujin Circle Negiramen/Negiramen Quest/Auto Generated/Images/Tile Set/map-tile-format-8x19.png">
+                       Source="C:/Users/むずでょ/Documents/Unity Projects/Negiramen Practice/Assets/Doujin Circle Negiramen/Negiramen Quest/Auto Generated/Images/Tileset/map-tile-format-8x19.png">
                 <Image x:Name="tileImage"
                        Grid.Row="0" Grid.Column="0"
                        Margin="4,4,0,0"
                        WidthRequest="{Binding ImageWidthAsInt}" HeightRequest="{Binding ImageHeightAsInt}"
                        HorizontalOptions="Start" VerticalOptions="Start"
-                       Source="C:/Users/むずでょ/Documents/Unity Projects/Negiramen Practice/Assets/Doujin Circle Negiramen/Negiramen Quest/Auto Generated/Images/Tile Set/map-tile-format-8x19.png">
+                       Source="C:/Users/むずでょ/Documents/Unity Projects/Negiramen Practice/Assets/Doujin Circle Negiramen/Negiramen Quest/Auto Generated/Images/Tileset/map-tile-format-8x19.png">
                 <Image x:Name="tileImage"
                        Grid.Row="0" Grid.Column="0"
                        Margin="4,4,0,0"
                        WidthRequest="{Binding ImageWidthAsInt}" HeightRequest="{Binding ImageHeightAsInt}"
                        HorizontalOptions="Start" VerticalOptions="Start"
-                       Source="{Binding TileSetImageFilePathAsStr}">
+                       Source="{Binding TilesetImageFilePathAsStr}">
                 -->
                 <!--
                     MAUI には マウス・ダウンと、マウス・アップの捕捉がなく、
@@ -229,7 +229,7 @@
                        HorizontalOptions="Start" VerticalOptions="Start"
                        Margin="4,4,0,0"
                        WidthRequest="{Binding ImageWidthAsInt}" HeightRequest="{Binding ImageHeightAsInt}"                       
-                       Source="{Binding WorkingTileSetImageFilePathAsStr}">
+                       Source="{Binding WorkingTilesetImageFilePathAsStr}">
                     <Image.GestureRecognizers>
                         <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
                         <PointerGestureRecognizer PointerMoved="PointerGestureRecognizer_PointerMoved"/>
@@ -238,8 +238,8 @@
                 <!--
                 -->
 
-                <!--    タイル・セット画像
-                        ==================
+                <!--    タイルセット画像
+                        ================
                 
                         * スキア・シャープのキャンバスを使う
                 -->
@@ -268,7 +268,7 @@
                               WidthRequest="{Binding GridCanvasWidthAsInt}" HeightRequest="{Binding GridCanvasHeightAsInt}"
                               InputTransparent="True">
                     <GraphicsView.Drawable>
-                        <modelsDrawing:TileSetGrid BindingContext="{x:Reference thisContentPage}"
+                        <modelsDrawing:TilesetGrid BindingContext="{x:Reference thisContentPage}"
                                                    HalfThicknessOfGridLineAsInt="{Binding TilePaletteEditPageVM.HalfThicknessOfGridLineAsInt}"
                                                    GridLeftTop="{Binding TilePaletteEditPageVM.GridLeftTop}"
                                                    GridTileSize="{Binding TilePaletteEditPageVM.GridTileSize}"/>
@@ -285,7 +285,7 @@
                               InputTransparent="True">
                     <GraphicsView.Drawable>
                         <modelsDrawing:ColoredMap BindingContext="{x:Reference thisContentPage}"
-                                                  TileSetSettings="{Binding TilePaletteEditPageVM.TileSetSettings}"/>
+                                                  TilesetSettings="{Binding TilePaletteEditPageVM.TilesetSettings}"/>
                     </GraphicsView.Drawable>
                 </GraphicsView>
 
