Rename "Tile Palette Edit" to "Tile Crop".

--- a/Visual Studio/2D RPG Negiramen/AppShell.xaml
+++ b/Visual Studio/2D RPG Negiramen/AppShell.xaml
@@ -84,7 +84,7 @@
 
     <ShellContent
         Title="Tile palette edit"
-        ContentTemplate="{DataTemplate views:TilePaletteEditPage}"
-        Route="TilePaletteEditPage" />
+        ContentTemplate="{DataTemplate views:TileCropPage}"
+        Route="TileCropPage" />
 
 </Shell>
