--- a/Visual Studio/2D RPG Negiramen/Views/TileCropPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TileCropPage.xaml
@@ -7,7 +7,7 @@
              xmlns:skia="clr-namespace:SkiaSharp.Views.Maui.Controls;assembly=SkiaSharp.Views.Maui.Controls"
              xmlns:viewModels="clr-namespace:_2D_RPG_Negiramen.ViewModels"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-             x:Class="_2D_RPG_Negiramen.Views.TilePaletteEditPage"
+             x:Class="_2D_RPG_Negiramen.Views.TileCropPage"
              Loaded="ContentPage_Loaded">
 
     <!--    リソースの用意
@@ -27,7 +27,7 @@
 
     <!-- 束縛しているビューモデル -->
     <ContentPage.BindingContext>
-        <viewModels:TilePaletteEditPageViewModel />
+        <viewModels:TileCropPageViewModel />
     </ContentPage.BindingContext>
 
     <!--    画面内タイトル
@@ -269,9 +269,9 @@
                               InputTransparent="True">
                     <GraphicsView.Drawable>
                         <modelsDrawing:TilesetGrid BindingContext="{x:Reference thisContentPage}"
-                                                   HalfThicknessOfGridLineAsInt="{Binding TilePaletteEditPageVM.HalfThicknessOfGridLineAsInt}"
-                                                   GridLeftTop="{Binding TilePaletteEditPageVM.GridLeftTop}"
-                                                   GridTileSize="{Binding TilePaletteEditPageVM.GridTileSize}"/>
+                                                   HalfThicknessOfGridLineAsInt="{Binding TileCropPageVM.HalfThicknessOfGridLineAsInt}"
+                                                   GridLeftTop="{Binding TileCropPageVM.GridLeftTop}"
+                                                   GridTileSize="{Binding TileCropPageVM.GridTileSize}"/>
                     </GraphicsView.Drawable>
                 </GraphicsView>
 
@@ -285,7 +285,7 @@
                               InputTransparent="True">
                     <GraphicsView.Drawable>
                         <modelsDrawing:ColoredMap BindingContext="{x:Reference thisContentPage}"
-                                                  TilesetSettings="{Binding TilePaletteEditPageVM.TilesetSettings}"/>
+                                                  TilesetSettings="{Binding TileCropPageVM.TilesetSettings}"/>
                     </GraphicsView.Drawable>
                 </GraphicsView>
 
@@ -300,9 +300,9 @@
                               InputTransparent="True">
                     <GraphicsView.Drawable>
                         <modelsDrawing:TileCursor BindingContext="{x:Reference thisContentPage}"
-                                                  HalfThicknessOfTileCursorLine="{Binding TilePaletteEditPageVM.HalfThicknessOfTileCursorLine}"
-                                                  SelectedTileSize="{Binding TilePaletteEditPageVM.SelectedTileSize}"
-                                                  SelectingOnPointingDevice="{Binding TilePaletteEditPageVM.SelectingOnPointingDevice}"/>
+                                                  HalfThicknessOfTileCursorLine="{Binding TileCropPageVM.HalfThicknessOfTileCursorLine}"
+                                                  SelectedTileSize="{Binding TileCropPageVM.SelectedTileSize}"
+                                                  SelectingOnPointingDevice="{Binding TileCropPageVM.SelectingOnPointingDevice}"/>
                     </GraphicsView.Drawable>
                 </GraphicsView>
 
