--- a/Visual Studio/2D RPG Negiramen/Views/MainPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/MainPage.xaml
@@ -4,7 +4,8 @@
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:viewModels="clr-namespace:_2D_RPG_Negiramen.ViewModels"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="_2D_RPG_Negiramen.Views.MainPage">
+             x:Class="_2D_RPG_Negiramen.Views.MainPage"
+             NavigatedTo="ContentPage_NavigatedTo">
 
     <!-- 束縛しているビューモデル -->
     <ContentPage.BindingContext>
